[tool.poetry]
name = "adv-mla-lab-2"
version = "0.1.0"
description = ""
authors = ["chuannarongvat <narongvat.chingpayakmon@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "adv_mla_lab_2"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
pandas = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
